--- a/package.json
+++ b/package.json
@@ -14,12 +14,17 @@
     "@mdi/js": "^6.7.96",
     "@mdi/react": "^1.6.0",
     "@react-native-firebase/app": "^14.11.0",
+    "@react-navigation/native": "^6.0.10",
+    "@react-navigation/native-stack": "^6.6.2",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
+    "firebase": "^9.8.3",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-paper": "^4.12.1",
+    "react-native-safe-area-context": "4.2.4",
+    "react-native-screens": "~3.11.1",
     "react-native-vector-icons": "^9.1.0",
     "react-native-web": "0.17.7"
   },
