--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/app": "^14.11.0",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
+    "@react-navigation/stack": "^6.2.1",
     "expo": "~45.0.0",
     "expo-status-bar": "~1.3.0",
     "firebase": "^9.8.3",
